# DGEngine

./: .editorconfig  .gitattributes  .gitignore  BUILD.txt  CMakeLists.txt  CMakePresets.json  DGEngine.sln  DGEngine.vcxproj  DGEngineLinux.cbp  DGEngineWindows.cbp  LICENSE  LICENSE.Zlib.txt  LICENSE.txt  License Notes.txt  Project.vcxproj  README.md  ds1.cpp  ds1.h  dt1_test.cpp  launch.vs.json  main.json
DGEngine.core/: .editorconfig  .gitattributes  .gitignore  BUILD.txt  CMakeLists.txt  CMakePresets.json  DGEngine.core.vcxproj  LICENSE.Zlib.txt  LICENSE.txt  README.md  launch.vs.json
DGEngine.core/.github/workflows/: main.yml
DGEngine.core/docs/: configuration-files.md  readme.md
DGEngine.core/docs/actions/: readme.md
DGEngine.core/docs/drawables/: animation.md  button.md  circle.md  game.md  image.md  inputText.md  loadingScreen.md  menu.md  movie.md  panel.md  readme.md  rectangle.md  scrollable.md  shape.md  text.md
DGEngine.core/docs/resources/: audio.md  file.md  font.md  gameInputEvent.md  imageContainer.md  inputEvent.md  load.md  mountFile.md  palette.md  readme.md  shader.md  sound.md  texture.md  texturePack.md  variable.md
DGEngine.core/src/: Animation.h  AudioSource.h  BindableText.cpp  BindingFlags.h  BitmapButton.cpp  BitmapButton.h  BitmapFont.cpp  BitmapFont.h  BitmapText.cpp  BitmapText.h  Button.cpp  Button.h  CachedImagePack.cpp  CachedImagePack.h  Circle.cpp  Circle.h  CmdLineUtils.cpp  CmdLineUtils.h  Event.cpp  FadeInOut.h  FileUtils.cpp  Font.h  Formulas.h  Game.cpp  Game.h  GameUtils.h  Hooks.cpp  Hooks.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  InputEvent.cpp  InputEvent.h  InputText.h  LoadingScreen.cpp  LoadingScreen.h  Menu.cpp  Movie2.cpp  Palette.cpp  (+18 more)
DGEngine.core/src/Actions/: ActAction.h  ActAnimation.h  ActAudio.h  ActButton.h  ActCondition.h  ActDrawable.h  ActEvent.h  ActFade.h  ActFont.h  ActImage.h  ActLoadingScreen.h  ActMenu.h  ActMount.h  ActMovie.h  ActPalette.h  ActRandom.h  ActResource.h  ActSound.h  ActText.h  ActVisibility.h  ActiontList.h
DGEngine.core/src/Game/: ActionQueryable.h  AnimationFlags.h  AnimationInfo.h  BaseAnimation.cpp  BaseAnimation.h  BlendMode.h  Direction.h  Event.h  EventManager.cpp  EventManager.h  FadeInOut.cpp  FadeInOut.h  Formula.cpp  Formula.h  Game.cpp  Game.h  GameInputEventManager.cpp  GameInputEventManager.h  GameQueryable.cpp  GameQueryable.h  IfCondition.cpp  IfCondition.h  IgnoreResource.h  InputEvent.cpp  InputEvent.h  QueryObject.h  Queryable.cpp  Queryable.h  ResourceBundle.h  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  TextureInfo.h  TextureQueryable.h  UIObject.cpp  UIObject.h  VarOrPredicate.h  VarOrQueryObject.h  Variable.h  (+2 more)
DGEngine.core/src/Game/Actions/: ActAction.h  ActAnimation.h  ActAudio.h  ActButton.h  ActCondition.h  ActCursor.h  ActDrawable.h  ActEvent.h  ActFade.h  ActFocus.h  ActFont.h  ActGame.h  ActIO.h  ActImage.h  ActInputText.h  ActLoad.h  ActLoadingScreen.h  ActMenu.h  ActMount.h  ActMovie.h  ActPalette.h  ActPanel.h  ActRandom.h  ActResource.h  ActScrollable.h  ActShader.h  ActSound.h  ActText.h  ActVariable.h  ActVisibility.h  ActionList.h
DGEngine.core/src/Game/Drawables/: Animation.cpp  Animation.h  BindableText.cpp  BindableText.h  BitmapButton.cpp  BitmapButton.h  BitmapText.cpp  BitmapText.h  Button.cpp  Button.h  Circle.cpp  Circle.h  DrawableText.h  Image.cpp  Image.h  InputText.cpp  LoadingScreen.cpp  (+18 more)
DGEngine.core/src/ImageContainers/: ImageContainer.h  SimpleImageContainer.h
DGEngine.core/src/Json/: JsonUtils.cpp  JsonUtils.h  SaveUtils.cpp  SaveUtils.h
DGEngine.core/src/Parser/: ParseAction.cpp  ParseAction.h  ParseAnimation.cpp  ParseAnimation.h  ParseAudio.cpp  ParseAudio.h  ParseButton.cpp  ParseButton.h  ParseCircle.cpp  ParseCircle.h  ParseCommon.cpp  ParseCommon.h  ParseCondition.cpp  ParseCondition.h  ParseCursor.cpp  ParseCursor.h  ParseEvent.cpp  ParseFile.cpp  ParseFile.h  ParseFileBytes.h  ParseFont.h  ParseGameInputEvent.cpp  ParseGameInputEvent.h  ParseImage.cpp  ParseImage.h  ParseImageContainer.cpp  ParseImageContainer.h  ParseInputEvent.cpp  ParseInputEvent.h  ParseInputText.cpp  ParseInputText.h  ParseLoadingScreen.cpp  ParseMenu.cpp  ParseMenu.h  ParseMenuButton.cpp  ParseMenuButton.h  ParseMountFile.cpp  ParseMountFile.h  ParseMovie.cpp  ParseMovie.h  (+24 more)
DGEngine.core/src/Predicates/: PredIO.h
DGEngine.core/src/Resources/: AudioSource.h  BitmapFont.cpp  BitmapFont.h  CachedImagePack.h  FileBytes.h  Font.h  ImageContainer.h  Palette.cpp  Palette.h  Shader.cpp  Shader.h  TexturePack.cpp  TexturePack.h
DGEngine.core/src/SFML/: CompositeSprite.cpp  CompositeSprite.h  Music2.cpp  Music2.h  MusicLoops.cpp  PhysFSStream.h  SFMLUtils.cpp  SFMLUtils.h  Sprite2.cpp  Sprite2.h  Surface.cpp  Surface.h  Text2.cpp  Text2.h  VertexArray2.cpp  VertexArray2.h  VertexShape.cpp  VertexShape.h  View2.cpp  View2.h  Wave2.cpp  Wave2.h
DGEngine.core/src/TexturePacks/: BitmapFontTexturePack.h  CachedTexturePack.cpp  CachedTexturePack.h  CompositeTexturePack.cpp  CompositeTexturePack.h  IndexedTexturePack.cpp  IndexedTexturePack.h  RectTexturePack.cpp  RectTexturePack.h  SimpleTexturePack.cpp  SimpleTexturePack.h  StackedTexturePack.cpp  StackedTexturePack.h  TexturePack.cpp  TexturePack.h
DGEngine.core/src/Utils/: BinarySearch.h  EasedValue.h  ElapsedTime.h  FixedArray.h  FixedMap.h  Helper2D.h  LRUCache.h  LoadLibrary.cpp  LoadLibrary.h  Log.h  Number.h  NumberVector.h  PairXY.h  Random.cpp  Random.h  ReverseIterable.h  StreamReader.h  StringHash.cpp  StringHash.h  UnorderedStringMap.h  Utils.cpp  Utils.h  Vector2D.h  re.c  small_vector.hpp
DGEngine.core/src/endian/: big_endian.hpp  stream_reader.hpp
DGEngine.core/src/rapidjson/: document.h  pointer.h  prettywriter.h  rapidjson.h  uri.h  writer.h
DGEngine.core/src/sfeMovie/: Demuxer.cpp  MovieImpl.hpp  StreamSelection.hpp  Timer.cpp  Timer.hpp  VideoStream.cpp
DGEngine.core/test/: CMakeLists.txt  README.md
DGEngine.core/test/data/: text.txt
DGEngine.core/test/src/: Main.cpp
DGEngine.core/vcpkg/triplets/: x64-windows-static.cmake
(+3556 files in other folders)
